<resources>
    <string name="app_name">OMR Demo</string>
    <string name="app_key_text">App KEY</string>
    <string name="app_sid_text">App SID</string>
    <string name="base_path_text">Base Path</string>
    <string name="app_key_hint">Enter APP KEY</string>
    <string name="app_key_value">4a71162221917aae1bc9cea781058a6b</string>
    <string name="app_sid_hint">Enter APP SID</string>
    <string name="app_sid_value">94ecd240-37b3-4c64-8941-984765383444</string>
    <string name="base_path_hint">Enter Base Path</string>
    <string name="base_path_value">http://saltov-gpu-3.dynabic.com:9083/v1.1</string>
    <string name="btn_generate_template_text">Perform</string>
    <string name="result_activity_text">Result</string>
</resources>
